Fix mobile issues where overflow was not triggering

--- a/client/src/pages/About.module.scss
+++ b/client/src/pages/About.module.scss
@@ -9,12 +9,12 @@
   overflow: auto;
   .contentContainer {
     display: flex;
-    justify-content: center;
     width: 80%;
     height: 80%;
     background-color: hsla(181, 91%, 99%, 1);
     flex-direction: column;
     margin-top: 4rem;
+    overflow: auto;
     @media only screen and (min-width: 900px) {
       width: 80%;
       height: 70%;
@@ -37,8 +37,8 @@
     .aboutGif {
       display: flex;
       align-self: center;
-      width: 200px;
-      height: 200px;
+      width: 250px;
+      height: 250px;
       margin-top: 1rem;
     }
   }
